--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: column;
     width: 550px;
-    height: 620px;
+    height: 680px;
     margin: auto;
     border-radius: 25px;
     background-color: rgb(203, 203, 203);
@@ -15,7 +15,7 @@
 
 #screen {
     height: 15%;
-    margin: 30px 40px;
+    margin: 40px 40px 30px 40px;
     padding: 15px;
     display: flex;
     justify-content: end;
@@ -30,12 +30,12 @@
     justify-content: space-between;
     align-content: space-between;
     height: 85%;
-    padding: 10px 30px 40px 30px;
+    padding: 10px 30px 50px 30px;
 }
 
 button {
     font-size: 30px;
-    flex: 0 0 22%;
+    flex: 0 0 23%;
     height: 70px;
     border-radius: 35px;
 }
